gateways/datawine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datawine-gateway-service
spec:
  selector:
    app: datawine-gateway
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
