gateways/datawine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datawine-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: pcd.plataforma.local
    http:
      paths:
      - path: /api/gateway/datawine(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: datawine-gateway-service
            port:
              number: 8086
